/watch page and player fix